--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "typescript": ">=4.5.0"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.8.0",
     "@openzeppelin/contracts": "^5.0.0",
-    "@openzeppelin/contracts-upgradeable": "^5.0.0"
+    "@openzeppelin/contracts-upgradeable": "^5.0.0",
+    "@uniswap/v3-core": "^1.0.1"
   }
 }
